Practice/network policies/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-1
  labels:
    deploy: deploy1

spec:
  replicas: 1
  selector:
    matchLabels:
      pod: pod1
  template:
    metadata:
      labels:
        pod: pod1
    spec:
      containers:
        - name: cont-1
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    pod: pod1
  ports:
  - port: 80
    targetPort: 80
