Practice/network policies/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2
  labels:
    deploy: deploy2

spec:
  replicas: 1
  selector:
    matchLabels:
      pod: pod2
  template:
    metadata:
      labels:
        pod: pod2
    spec:
      containers:
        - name: cont-2
          image: httpd
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    pod: pod2
  ports:
  - port: 80
    targetPort: 80
