Practice/network policies/disable-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-pod2
spec:
  podSelector:
    matchLabels:
      pod: pod2
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            pod: pod1
        namespaceSelector:
          matchLabels:
            projet: myproject

  egress:
    - to:
      - podSelector:
          matchLabels:
            pod: pod1
        namespaceSelector:
          matchLabels:
            projet: myproject
